--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "async": "^2.6.1",
     "asyncio": "0.0.2",
     "colors": "^1.3.0",
-    "discord": "^11.3.2",
+    "discord": "",
     "discord-rich-presence": "0.0.6",
     "discord.js": "^11.3.2",
     "hoek": "^5.0.3",
