--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "discord-rich-presence": "0.0.6",
     "discord.js": "^11.4.2",
     "hoek": "^5.0.4",
+    "node-fetch": "^2.2.1",
     "node-gyp": "^3.8.0",
     "npm": "^6.4.1",
     "rebuild": "^0.1.2"
