--- a/config.json
+++ b/config.json
@@ -4,6 +4,6 @@
 "prefix": "!",
 "selfbot": "[true or false]",
 "owner":"[your user id]",
-"ownerID":"[same as owner]"
+"ownerID":"[same as owner]",
 "roleToDisco" : "[role name]"
 }
