--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discord.js",
+  "name": "node-cmd",
   "version": "1.0.0",
   "main": "bot.js",
   "dependencies": {
@@ -10,9 +10,12 @@
     "discord-rich-presence": "0.0.6",
     "discord.js": "^11.4.2",
     "hoek": "^5.0.4",
+    "lodash": "^4.17.11",
+    "node-cmd": "^3.0.0",
     "node-fetch": "^2.2.1",
     "node-gyp": "^3.8.0",
     "npm": "^6.4.1",
+    "readline": "^1.3.0",
     "rebuild": "^0.1.2"
   },
   "devDependencies": {},
@@ -21,5 +24,5 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "# open run.bat, do node bot in console (make sure node.js is installed, and discord.js is installed)"
 }
