--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "node-cmd",
+  "name": "cmd",
   "version": "1.0.0",
   "main": "bot.js",
   "dependencies": {
-    "async": "^2.6.1",
+    "async": "^2.6.2",
     "asyncio": "0.0.2",
-    "colors": "^1.3.2",
+    "colors": "^1.3.3",
     "discord": "",
     "discord-rich-presence": "0.0.6",
     "discord.js": "^11.4.2",
     "hoek": "^5.0.4",
     "lodash": "^4.17.11",
     "node-cmd": "^3.0.0",
-    "node-fetch": "^2.2.1",
+    "node-fetch": "^2.5.0",
     "node-gyp": "^3.8.0",
     "npm": "^6.4.1",
+    "pm2": "^3.5.0",
     "readline": "^1.3.0",
-    "rebuild": "^0.1.2"
+    "rebuild": "^0.1.2",
+    "ytdl-core": "^0.29.1"
   },
   "devDependencies": {},
   "scripts": {
