--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pm2": "^3.5.0",
     "readline": "^1.3.0",
     "rebuild": "^0.1.2",
+    "tar": "^4.4.8",
     "ytdl-core": "^0.29.1"
   },
   "devDependencies": {},
