--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "async": "^2.6.2",
     "asyncio": "0.0.2",
+    "axios": "^0.19.0",
     "colors": "^1.3.3",
     "discord": "",
     "discord-rich-presence": "0.0.6",
