--- a/.gitignore
+++ b/.gitignore
@@ -75,5 +75,20 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Linux stuff
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
