--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pm2": "^3.5.1",
     "readline": "^1.3.0",
     "rebuild": "^0.1.2",
+    "shelljs": "^0.8.3",
     "tar": "^4.4.10",
     "ytdl-core": "^0.29.2"
   },
