--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
 "selfbot": "[true or false]",
 "owner":"[your user id]",
 "roleToDisco": "[role name]",
-"MusicCommands": "false"
+"MusicCommands": "false",
+"DevMode": "true"
 }
