--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yiff",
+  "name": "hmm465bot",
   "version": "1.0.0",
   "main": "bot.js",
   "dependencies": {
@@ -22,6 +22,7 @@
     "rebuild": "^0.1.2",
     "shelljs": "^0.8.3",
     "tar": "^4.4.10",
+    "yiff": "^1.2.1",
     "ytdl-core": "^0.29.5"
   },
   "devDependencies": {},
