--- a/config.json
+++ b/config.json
@@ -6,5 +6,7 @@
 "owner":"[your user id]",
 "roleToDisco": "[role name]",
 "MusicCommands": "false",
-"DevMode": "false"
+"DevMode": "false",
+"GoogleApiKey": "[api key]",
+"SearchEngineId": "[id]"
 }
