--- a/config.json
+++ b/config.json
@@ -6,7 +6,5 @@
 "owner":"[your user id]",
 "roleToDisco": "[role name]",
 "MusicCommands": "false",
-"DevMode": "false",
-"GoogleApiKey": "[api key]",
-"SearchEngineId": "[id]"
+"DevMode": "false"
 }
