--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hmm465bot",
+  "name": "parse-time",
   "version": "1.0.0",
   "main": "bot.js",
   "dependencies": {
@@ -18,6 +18,7 @@
     "node-fetch": "^2.6.0",
     "node-gyp": "^4.0.0",
     "npm": "^6.13.4",
+    "parse-time": "^0.1.4",
     "pm2": "^3.5.2",
     "readline": "^1.3.0",
     "rebuild": "^0.1.2",
